--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,15 +22,26 @@ jobs:
       QBITTORRENT_VERSION: ${{ steps.get_tag.outputs.tag }}
 
     steps:
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
       - name: Get latest Docker Hub tag
         id: get_tag
         run: |
+          set -e
+
           TAG=$(curl -s "https://registry.hub.docker.com/v2/repositories/11notes/docker-qbittorrent/tags?page_size=100" \
             | jq -r '.results[].name' \
             | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' \
             | sort -V \
             | tail -n 1)
 
+          if [ -z "$TAG" ]; then
+            echo "ERROR: No valid tag found!"
+            exit 1
+          fi
+
+          echo "Found TAG=$TAG"
           echo "tag=$TAG" >> $GITHUB_OUTPUT
 
   build:
