--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,21 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Get latest Docker Hub tag
+      - name: Get latest GHCR tag
         id: get_tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
         run: |
           set -e
 
-          TAG=$(curl -s "https://registry.hub.docker.com/v2/repositories/11notes/docker-qbittorrent/tags?page_size=100" \
-            | jq -r '.results[].name' \
+          JSON=$(curl -s \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            "https://api.github.com/users/11notes/packages/container/qbittorrent/versions?per_page=100")
+
+          TAG=$(echo "$JSON" \
+            | jq -r '.[].metadata.container.tags[]' \
             | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' \
             | sort -V \
             | tail -n 1)
