--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
           TAG=$(echo "$JSON" \
             | jq -r '.[].metadata.container.tags[]' \
-            | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' \
+            | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' \
             | sort -V \
             | tail -n 1)
 
